--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,4 @@ aspnet-core/DeleteBinsAndObjs.bat
 aspnet-core/src/Zinlo.Web.Host/healthchecksdb
 aspnet-core/src/Zinlo.Web.Public/healthchecksdb
 aspnet-core/src/Zinlo.Web.Mvc/healthchecksdb
+aspnet-core/src/Zinlo.Web.Host/appsettings.json
