--- a/aspnet-core/src/Zinlo.EntityFrameworkCore/Zinlo.EntityFrameworkCore.csproj
+++ b/aspnet-core/src/Zinlo.EntityFrameworkCore/Zinlo.EntityFrameworkCore.csproj
@@ -16,6 +16,7 @@
     <Compile Remove="Migrations\20200107102144_TestMI.Designer.cs" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Bogus" Version="28.4.4" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.1.0">
       <PrivateAssets>all</PrivateAssets>
