--- a/aspnet-core/src/Zinlo.EntityFrameworkCore/Zinlo.EntityFrameworkCore.csproj
+++ b/aspnet-core/src/Zinlo.EntityFrameworkCore/Zinlo.EntityFrameworkCore.csproj
@@ -14,6 +14,8 @@
     <Compile Remove="Migrations\20200107082942_CategoryAndCommentsTable.Designer.cs" />
     <Compile Remove="Migrations\20200107102144_TestMI.cs" />
     <Compile Remove="Migrations\20200107102144_TestMI.Designer.cs" />
+    <Compile Remove="Migrations\20200114100822_added-entities.cs" />
+    <Compile Remove="Migrations\20200114100822_added-entities.Designer.cs" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Bogus" Version="28.4.4" />
