create task updation and show checklist of task web api

--- a/angular/angular.json
+++ b/angular/angular.json
@@ -52,7 +52,8 @@
               
               "src/app/shared/core.less",
               "src/app/shared/layout/layout.less",
-              "src/styles.css"
+              "src/styles.css",
+              "src/ignite-styles.scss"
             ],
             "scripts": [
               "node_modules/@aspnet/signalr/dist/browser/signalr.min.js",
