--- a/aspnet-core/src/Zinlo.Web.Host/appsettings.json
+++ b/aspnet-core/src/Zinlo.Web.Host/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "Default": "server=127.0.0.1;uid=root;pwd=12345;database=ZinloDB14"
+    "Default": "server=127.0.0.1;uid=root;pwd=12345;database=ZinloDBasdf"
   },
   "AbpZeroLicenseCode": "00J1H1nEHPKVHMIx7Zk/mn4Q==605f5390da5e634b2d2de8b71c7cb706",
   "Abp": {
