--- a/angular/package.json
+++ b/angular/package.json
@@ -30,6 +30,7 @@
     "@yaireo/tagify": "^3.2.6",
     "abp-ng2-module": "^5.1.0",
     "abp-web-resources": "^4.2.0",
+    "acorn": "^7.1.0",
     "adal-angular": "^1.0.17",
     "angular-gridster2": "^8.2.0",
     "angular-oauth2-oidc": "^8.0.4",
@@ -39,6 +40,7 @@
     "cookieconsent": "^3.1.1",
     "core-js": "^3.3.3",
     "famfamfam-flags": "^1.0.0",
+    "igniteui-angular": "^8.2.15",
     "js-cookie": "^2.2.1",
     "just-compare": "^1.3.0",
     "localforage": "^1.7.3",
