--- a/angular/package.json
+++ b/angular/package.json
@@ -27,6 +27,9 @@
     "@angular/router": "^8.2.5",
     "@aspnet/signalr": "^1.1.4",
     "@swimlane/ngx-charts": "^12.0.1",
+    "@uppy/core": "^1.7.1",
+    "@uppy/dashboard": "^1.5.2",
+    "@uppy/xhr-upload": "^1.4.2",
     "@yaireo/tagify": "^3.2.6",
     "abp-ng2-module": "^5.1.0",
     "abp-web-resources": "^4.2.0",
@@ -63,6 +66,8 @@
     "simple-line-icons": "^2.4.1",
     "sweetalert2": "^8.18.6",
     "text-mask-addons": "^3.8.0",
+    "uppy": "^1.8.0",
+    "uppy-angular": "^0.0.9",
     "webdriver-manager": "^12.1.7",
     "zone.js": "~0.10.2"
   },
