--- a/aspnet-core/src/Zinlo.Application.Shared/Zinlo.Application.Shared.csproj
+++ b/aspnet-core/src/Zinlo.Application.Shared/Zinlo.Application.Shared.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Abp.Web.Common" Version="5.1.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="3.1.1" />
     <PackageReference Include="System.ComponentModel.Annotations" Version="4.7.0" />
   </ItemGroup>
   <ItemGroup>
