--- a/aspnet-core/src/Zinlo.Web.Host/appsettings.json
+++ b/aspnet-core/src/Zinlo.Web.Host/appsettings.json
@@ -1,10 +1,8 @@
 {
-  //"ConnectionStrings": {
-  //  "Default": "server=127.0.0.1;uid=root;pwd=12345;database=ZinloDB14"
-  //},
+ 
 
   "ConnectionStrings": {
-    "Default": "User ID=postgres;Password=12345;Host=localhost;Port=5432;Database=zinloDb;Pooling=true;"
+    "Default": "User ID=zinlouser; Password=zinlo; Host=localhost; Port=5432; Database=zinlodb; Pooling=true;"
   },
 
   "AbpZeroLicenseCode": "00J1H1nEHPKVHMIx7Zk/mn4Q==605f5390da5e634b2d2de8b71c7cb706",
