--- a/angular/.vscode/settings.json
+++ b/angular/.vscode/settings.json
@@ -14,6 +14,7 @@
         "*.csproj": true,
         "*.sln": true,
         "*.csproj.user": true,
-        "*.suo": true
+        "*.suo": true,
+        "editor.formatOnSave": true
     }
 }
