Closing checklist postEdit api. userautofill search fixing some other fixes

--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,6 @@ aspnet-core/src/Zinlo.Web.Host/healthchecksdb
 aspnet-core/src/Zinlo.Web.Public/healthchecksdb
 aspnet-core/src/Zinlo.Web.Mvc/healthchecksdb
 aspnet-core/src/Zinlo.Web.Host/appsettings.json
+angular/src/assets/appconfig.json
+aspnet-core/src/Zinlo.Web.Host/appsettings.json
+aspnet-core/src/Zinlo.Web.Host/appsettings.json
