--- a/aspnet-core/src/Zinlo.Web.Host/Zinlo.Web.Host.csproj
+++ b/aspnet-core/src/Zinlo.Web.Host/Zinlo.Web.Host.csproj
@@ -47,6 +47,7 @@
     <EmbeddedResource Include="wwwroot\swagger\ui\index.html" />
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="wwwroot\Uploads-Attachments\" />
     <Folder Include="wwwroot\Plugins\" />
   </ItemGroup>
 </Project>
