--- a/aspnet-core/src/Zinlo.Application/Zinlo.Application.csproj
+++ b/aspnet-core/src/Zinlo.Application/Zinlo.Application.csproj
@@ -15,6 +15,7 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="EPPlus" Version="4.5.3.2" />
+    <PackageReference Include="FluentDateTime" Version="2.0.0" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Zinlo.Application.Shared\Zinlo.Application.Shared.csproj" />
