--- a/aspnet-core/src/Zinlo.EntityFrameworkCore/Zinlo.EntityFrameworkCore.csproj
+++ b/aspnet-core/src/Zinlo.EntityFrameworkCore/Zinlo.EntityFrameworkCore.csproj
@@ -16,6 +16,8 @@
     <Compile Remove="Migrations\20200107102144_TestMI.Designer.cs" />
     <Compile Remove="Migrations\20200114100822_added-entities.cs" />
     <Compile Remove="Migrations\20200114100822_added-entities.Designer.cs" />
+    <Compile Remove="Migrations\20200320151535_initial.cs" />
+    <Compile Remove="Migrations\20200320151535_initial.Designer.cs" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Bogus" Version="28.4.4" />
