--- a/angular/package.json
+++ b/angular/package.json
@@ -29,6 +29,7 @@
     "@ng-select/ng-select": "^3.7.2",
     "@ngrx/store": "^9.0.0",
     "@swimlane/ngx-charts": "^12.0.1",
+    "@tinymce/tinymce-angular": "^3.5.0",
     "@uppy/core": "^1.7.1",
     "@uppy/dashboard": "^1.5.2",
     "@uppy/xhr-upload": "^1.4.2",
