--- a/aspnet-core/src/Zinlo.Web.Host/Zinlo.Web.Host.csproj
+++ b/aspnet-core/src/Zinlo.Web.Host/Zinlo.Web.Host.csproj
@@ -42,6 +42,7 @@
   <ItemGroup>
     <PackageReference Include="Abp.Castle.Log4Net" Version="5.1.0" />
     <PackageReference Include="AspNetCore.HealthChecks.UI" Version="3.0.4" />
+    <PackageReference Include="Hangfire.PostgreSql" Version="1.6.4.2" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="wwwroot\swagger\ui\index.html" />
