--- a/angular/package.json
+++ b/angular/package.json
@@ -56,6 +56,7 @@
     "ng2-file-upload": "^1.4.0",
     "ngx-bootstrap": "^5.2.0",
     "ngx-image-cropper": "^1.5.1",
+    "ngx-infinite-scroll": "^8.0.1",
     "ngx-perfect-scrollbar": "^8.0.0",
     "ngx-spinner": "^8.0.3",
     "object-path": "^0.11.4",
