--- a/aspnet-core/src/Zinlo.Application/Zinlo.Application.csproj
+++ b/aspnet-core/src/Zinlo.Application/Zinlo.Application.csproj
@@ -16,6 +16,7 @@
   <ItemGroup>
     <PackageReference Include="EPPlus" Version="4.5.3.2" />
     <PackageReference Include="FluentDateTime" Version="2.0.0" />
+    <PackageReference Include="log4net" Version="2.0.8" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Zinlo.Application.Shared\Zinlo.Application.Shared.csproj" />
