--- a/.github/workflows/zinloDotNet.yml
+++ b/.github/workflows/zinloDotNet.yml
@@ -16,8 +16,9 @@ jobs:
     - name: Setup .NET Core
       uses: actions/setup-dotnet@v1
       with:
-        dotnet-version: 3.1.101
+        dotnet-version: 3.1
     - name: Install dependencies
+      working-directory : ./aspnet-core/src/Zinlo.Web.Host
       run: dotnet restore
     - name: Build Zinlo
       run: dotnet build --configuration Release --no-restore
