--- a/.github/workflows/zinloDotNet.yml
+++ b/.github/workflows/zinloDotNet.yml
@@ -8,19 +8,19 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
-    - name: Setup .NET Core
+    - uses: actions/checkout@v1
+    - name: Setup .NET Core  
       uses: actions/setup-dotnet@v1
+      
       with:
         dotnet-version: 3.1
     - name: Install dependencies
-      working-directory : ./aspnet-core/src/Zinlo.Web.Host
-      run: dotnet restore
-    - name: Build Zinlo
-      run: dotnet build --configuration Release --no-restore
       working-directory: ./aspnet-core/src/Zinlo.Web.Host
+      run: dotnet restore ./aspnet-core/Zinlo.Web.sln --configuration Release
+    - name: Build Zinlo
+      run: dotnet build ./aspnet-core/Zinlo.Web.sln --configuration Release --no-restore
+      
   
