--- a/.github/workflows/zinloDotNet.yml
+++ b/.github/workflows/zinloDotNet.yml
@@ -18,9 +18,10 @@ jobs:
       with:
         dotnet-version: 3.1.101
     - name: Install dependencies
-      working-directory: ./aspnet-core/src/Zinlo.Web.Host
-      run: dotnet restore ./aspnet-core/Zinlo.Web.sln --configuration Release
+      working-directory: ./aspnet-core/
+      run: dotnet restore Zinlo.Web.sln --configuration Release
     - name: Build Zinlo
-      run: dotnet build ./aspnet-core/Zinlo.Web.sln --configuration Release --no-restore
+      working-directory: ./aspnet-core/
+      run: dotnet build Zinlo.Web.sln --configuration Release --no-restore
       
   
