--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,16 +1,11 @@
 # This is a basic workflow to help you get started with Actions
 
-name: Zinlo Angular
-
-# Controls when the action will run. Triggers the workflow on push or pull request
-# events but only for the master branch
+name: ZinloAngular
 on:
   push:
-    branches: [ Development ]
+    branches: [ development ]
   pull_request:
-    branches: [ Development ]
-
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
+    branches: [ development ]
 jobs:
  build:
     runs-on: ubuntu-18.04
