--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,5 +21,5 @@ jobs:
       run: npm install
     - name: Build
       working-directory: ./angular
-      run: npm run build -- --prod
+      run: ng build --aot --prod 
     
