--- a/.github/workflows/zinloAngular.yml
+++ b/.github/workflows/zinloAngular.yml
@@ -8,16 +8,17 @@ on:
     branches: [ development ]
 jobs:
  build:
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v1
-    - name: Use Node.js 12.8
+    - name: Use Node.js 12.12.0
       uses: actions/setup-node@v1
       with:
-        node-version: 12.8
+        node-version: 12.12.0
     - name: Install yarn
       working-directory: ./angular
       run: yarn install
     - name: Build angular app
+      working-directory: ./angular
       run: npm run publish  
     
