--- a/aspnet-core/src/Zinlo.EntityFrameworkCore/Zinlo.EntityFrameworkCore.csproj
+++ b/aspnet-core/src/Zinlo.EntityFrameworkCore/Zinlo.EntityFrameworkCore.csproj
@@ -42,6 +42,14 @@
     <Compile Remove="Migrations\20200416133524_add_table_accountBalance.Designer.cs" />
     <Compile Remove="Migrations\20200420083858_add_column_chartsofaccounts.cs" />
     <Compile Remove="Migrations\20200420083858_add_column_chartsofaccounts.Designer.cs" />
+    <Compile Remove="Migrations\20200422174620_new_table_accountBalances_added.cs" />
+    <Compile Remove="Migrations\20200422174620_new_table_accountBalances_added.Designer.cs" />
+    <Compile Remove="Migrations\20200422174954_new_table_accountBalances_added.cs" />
+    <Compile Remove="Migrations\20200422174954_new_table_accountBalances_added.Designer.cs" />
+    <Compile Remove="Migrations\20200422180214_new_table_accountBalances_added.cs" />
+    <Compile Remove="Migrations\20200422180214_new_table_accountBalances_added.Designer.cs" />
+    <Compile Remove="Migrations\20200424102427_Initial.cs" />
+    <Compile Remove="Migrations\20200424102427_Initial.Designer.cs" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Bogus" Version="28.4.4" />
