--- a/angular/angular.json
+++ b/angular/angular.json
@@ -37,7 +37,7 @@
               "node_modules/primeicons/primeicons.css",
               "node_modules/sweetalert2/dist/sweetalert2.css",
               "node_modules/cookieconsent/build/cookieconsent.min.css",
-
+              
               "src/assets/primeng/file-upload/css/primeng.file-upload.css",
               "src/assets/primeng/autocomplete/css/primeng.autocomplete.css",
               "src/assets/primeng/tree/css/primeng.tree.css",
@@ -73,7 +73,8 @@
               "node_modules/abp-web-resources/Abp/Framework/scripts/libs/abp.moment.js",
 
               "src/assets/metronic/vendors/global/vendors.bundle.js",
-              "src/assets/metronic/common/js/scripts.bundle.js"
+              "src/assets/metronic/common/js/scripts.bundle.js",
+              "node_modules/jquery/dist/jquery.min.js"
             ]
           },
           "configurations": {
