--- a/angular/package.json
+++ b/angular/package.json
@@ -15,6 +15,7 @@
   },
   "private": false,
   "dependencies": {
+    "-": "^0.0.1",
     "@angular/animations": "^8.2.5",
     "@angular/cdk": "^8.1.4",
     "@angular/common": "^8.2.5",
@@ -28,6 +29,7 @@
     "@aspnet/signalr": "^1.1.4",
     "@ng-select/ng-select": "^3.7.2",
     "@ngrx/store": "^9.0.0",
+    "@progress/kendo-angular-popup": "^3.0.5",
     "@swimlane/ngx-charts": "^12.0.1",
     "@uppy/core": "^1.7.1",
     "@uppy/dashboard": "^1.5.2",
@@ -46,6 +48,7 @@
     "core-js": "^3.3.3",
     "famfamfam-flags": "^1.0.0",
     "igniteui-angular": "^8.2.15",
+    "jquery": "^3.5.0",
     "js-cookie": "^2.2.1",
     "just-compare": "^1.3.0",
     "localforage": "^1.7.3",
@@ -66,6 +69,7 @@
     "quill": "^1.3.7",
     "rtl-detect": "^1.0.2",
     "rxjs": "^6.5.3",
+    "save": "^2.4.0",
     "simple-line-icons": "^2.4.1",
     "sweetalert2": "^8.18.6",
     "text-mask-addons": "^3.8.0",
