--- a/aspnet-core/src/Zinlo.Application/Zinlo.Application.csproj
+++ b/aspnet-core/src/Zinlo.Application/Zinlo.Application.csproj
@@ -17,6 +17,7 @@
     <PackageReference Include="EPPlus" Version="4.5.3.2" />
     <PackageReference Include="FluentDateTime" Version="2.0.0" />
     <PackageReference Include="log4net" Version="2.0.8" />
+    <PackageReference Include="NETStandard.Library" Version="2.0.3" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Zinlo.Application.Shared\Zinlo.Application.Shared.csproj" />
