--- a/aspnet-core/src/Zinlo.EntityFrameworkCore/Zinlo.EntityFrameworkCore.csproj
+++ b/aspnet-core/src/Zinlo.EntityFrameworkCore/Zinlo.EntityFrameworkCore.csproj
@@ -50,6 +50,8 @@
     <Compile Remove="Migrations\20200422180214_new_table_accountBalances_added.Designer.cs" />
     <Compile Remove="Migrations\20200424102427_Initial.cs" />
     <Compile Remove="Migrations\20200424102427_Initial.Designer.cs" />
+    <Compile Remove="Migrations\20200505165210_auditied_accountBalance.cs" />
+    <Compile Remove="Migrations\20200505165210_auditied_accountBalance.Designer.cs" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Bogus" Version="28.4.4" />
