--- a/angular/angular.json
+++ b/angular/angular.json
@@ -25,7 +25,8 @@
                 "glob": "abp.signalr-client.js",
                 "input": "node_modules/abp-web-resources/Abp/Framework/scripts/libs",
                 "output": "/assets/abp"
-              }
+              },
+              "src/manifest.webmanifest"
             ],
             "styles": [
               "node_modules/animate.css/animate.min.css",
@@ -101,7 +102,9 @@
                   "replace": "src/environments/environment.ts",
                   "with": "src/environments/environment.prod.ts"
                 }
-              ]
+              ],
+              "serviceWorker": true,
+              "ngswConfigPath": "ngsw-config.json"
             }
           }
         },
@@ -186,7 +189,8 @@
                 "glob": "abp.signalr-client.js",
                 "input": "node_modules/abp-web-resources/Abp/Framework/scripts/libs",
                 "output": "/assets/abp"
-              }
+              },
+              "src/manifest.webmanifest"
             ]
           }
         },
