--- a/angular/package.json
+++ b/angular/package.json
@@ -25,7 +25,9 @@
     "@angular/platform-browser": "^8.2.5",
     "@angular/platform-browser-dynamic": "^8.2.5",
     "@angular/platform-server": "^8.2.5",
+    "@angular/pwa": "^0.901.5",
     "@angular/router": "^8.2.5",
+    "@angular/service-worker": "^8.2.5",
     "@aspnet/signalr": "^1.1.4",
     "@ng-select/ng-select": "^3.7.2",
     "@ngrx/store": "^9.0.0",
