--- a/angular/package.json
+++ b/angular/package.json
@@ -29,6 +29,7 @@
     "@angular/router": "^8.2.5",
     "@angular/service-worker": "^8.2.5",
     "@aspnet/signalr": "^1.1.4",
+    "@kolkov/angular-editor": "^1.1.2",
     "@ng-select/ng-select": "^3.7.2",
     "@ngrx/store": "^9.0.0",
     "@progress/kendo-angular-popup": "^3.0.5",
