--- a/angular/package.json
+++ b/angular/package.json
@@ -48,6 +48,7 @@
     "angular2-counto": "^1.2.5",
     "angular2-text-mask": "^9.0.0",
     "animate.css": "^3.7.2",
+    "cmd": "^0.1.0",
     "cookieconsent": "^3.1.1",
     "core-js": "^3.3.3",
     "famfamfam-flags": "^1.0.0",
