--- a/buildspec-api.yml
+++ b/buildspec-api.yml
@@ -9,14 +9,17 @@ phases:
       - nohup /usr/local/bin/dockerd --host=unix:///var/run/docker.sock --host=tcp://127.0.0.1:2375 --storage-driver=overlay2&
       - timeout 15 sh -c "until docker info; do echo .; sleep 1; done"
       - aws --version
+      - $(aws ecr get-login --region $AWS_DEFAULT_REGION --no-include-email)
       - REPOSITORY_URI=876741939097.dkr.ecr.us-east-2.amazonaws.com/zinlo/api
+      - COMMIT_HASH=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)
   build:
     commands:
       - echo Build started on `date`
       - echo Building the Docker image $REPOSITORY_URI:${CODEBUILD_RESOLVED_SOURCE_VERSION}...
-      - docker build -t $REPOSITORY_URI:${CODEBUILD_RESOLVED_SOURCE_VERSION} -f aspnet-core/api.Dockerfile aspnet-core
+      - docker build -t $REPOSITORY_URI:$COMMIT_HASH -f aspnet-core/api.Dockerfile aspnet-core
   post_build:
     commands:
       - echo Build completed on `date`
       - echo Pushing the Docker images...
-      - docker push $REPOSITORY_URI:${CODEBUILD_RESOLVED_SOURCE_VERSION}
+      - $(aws ecr get-login --region $AWS_DEFAULT_REGION --no-include-email)
+      - docker push $REPOSITORY_URI:$COMMIT_HASH
