remvoed .github workflows as it has to be

--- a/buildspec-api.yml
+++ b/buildspec-api.yml
@@ -15,7 +15,7 @@ phases:
   build:
     commands:
       - echo Build started on `date`
-      - echo Building the Docker image $REPOSITORY_URI:${CODEBUILD_RESOLVED_SOURCE_VERSION}...
+      - echo Building the Docker image $[REPOSITORY_URI:$COMMIT_HASH]
       - docker build -t $REPOSITORY_URI:$COMMIT_HASH -f aspnet-core/api.Dockerfile aspnet-core
   post_build:
     commands:
