added docker compose files

--- a/angular/Dockerfile
+++ b/angular/Dockerfile
@@ -6,12 +6,13 @@ ENV APP_API_URL $APP_API_URL
 WORKDIR /app/
 
 COPY package*.json ./
+COPY yarn.lock ./
 
 RUN yarn install
 
 COPY . .
 
-RUN yarn run publish
+RUN yarn run build
 
 ######################################################################
 FROM nginx:alpine
@@ -20,3 +21,4 @@ COPY --from=Builder /app/dist /usr/share/nginx/html/
 EXPOSE 80
 CMD ["nginx", "-g", "daemon off;"]
 
+COPY . /usr/share/nginx/html
