ngx-bootstrap version is fixed to 5.5.0

--- a/angular/package.json
+++ b/angular/package.json
@@ -63,7 +63,7 @@
     "moment-timezone": "^0.5.27",
     "ng-recaptcha": "^5.0.0",
     "ng2-file-upload": "^1.4.0",
-    "ngx-bootstrap": "^5.2.0",
+    "ngx-bootstrap": "5.5.0",
     "ngx-doc-viewer": "^1.1.0",
     "ngx-image-cropper": "^1.5.1",
     "ngx-infinite-scroll": "^8.0.1",
