--- a/nginx/conf.d/zilno.com.conf
+++ b/nginx/conf.d/zilno.com.conf
@@ -9,9 +9,9 @@ server {
         index  index.html index.htm;
         try_files $uri $uri/ /index.html;
     }
-
+    
     location /api {
-        proxy_pass         http://api:3000;
+        proxy_pass         http://zinlo_api;
         proxy_redirect     off;
         proxy_set_header   Host $host;
         proxy_set_header   X-Real-IP $remote_addr;
