--- a/sample.env
+++ b/sample.env
@@ -5,5 +5,8 @@ CORS_ORIGIN=
 JWT_SECURITY_KEY=
 JWT_ISSUER=
 JWT_AUDIENCE=
+AbpZeroLicenseCode=
 
-APP_API_URL=
+
+STRIPE_SECRET_KEY=
+STRIPE_PUBLISH_KEY=
