--- a/nginx/conf.d/zilno.com.conf
+++ b/nginx/conf.d/zilno.com.conf
@@ -10,7 +10,7 @@ server {
         try_files $uri $uri/ /index.html;
     }
     
-    location /api {
+    location (/api|/AbpUserConfiguration|/singalr|/signalr-chat) {
         proxy_pass         http://zinlo_api;
         proxy_redirect     off;
         proxy_set_header   Host $host;
