added few more configurations

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,8 @@ services:
       "App:AllowAnonymousSignalRConnection": "true"
       "App:IdentityServer:IsEnabled": "false"
       "IdentityServer:IsEnabled": "false"
+      "HealthChecks:HealthChecksEnabled": "false"
+      "HealthChecks:HealthChecksUI:": "false"
       "AbpZeroLicenseCode": ${AbpZeroLicenseCode}
       "Authentication:JwtBearer:IsEnabled": "true"
       "Authentication:JwtBearer:SecurityKey": ${JWT_SECURITY_KEY}
