--- a/nginx/conf.d/zilno.com.conf
+++ b/nginx/conf.d/zilno.com.conf
@@ -10,7 +10,31 @@ server {
         try_files $uri $uri/ /index.html;
     }
     
-    location (/api|/AbpUserConfiguration|/singalr|/signalr-chat) {
+    location /api {
+        proxy_pass         http://zinlo_api;
+        proxy_redirect     off;
+        proxy_set_header   Host $host;
+        proxy_set_header   X-Real-IP $remote_addr;
+        proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header   X-Forwarded-Host $server_name;
+    }
+    location /AbpUserConfiguration {
+        proxy_pass         http://zinlo_api;
+        proxy_redirect     off;
+        proxy_set_header   Host $host;
+        proxy_set_header   X-Real-IP $remote_addr;
+        proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header   X-Forwarded-Host $server_name;
+    }
+    location /singalr{
+        proxy_pass         http://zinlo_api;
+        proxy_redirect     off;
+        proxy_set_header   Host $host;
+        proxy_set_header   X-Real-IP $remote_addr;
+        proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header   X-Forwarded-Host $server_name;
+    }
+    location /signalr-chat {
         proxy_pass         http://zinlo_api;
         proxy_redirect     off;
         proxy_set_header   Host $host;
