--- a/docker-compose-migration.yml
+++ b/docker-compose-migration.yml
@@ -1,7 +1,7 @@
 version: "3"
 services:
-  zinlo_api:
-    container_name: zinlo_api
+  zinlo_migrator:
+    container_name: zinlo_migrator
     build:
       context: aspnet-core
       dockerfile: migrator.Dockerfile
