converting http to https.

--- a/nginx/conf.d/zinlo.com.conf
+++ b/nginx/conf.d/zinlo.com.conf
@@ -5,6 +5,10 @@ server {
     client_max_body_size 50M;
     root   /usr/share/nginx/html;
 
+    if ($http_x_forwarded_proto = 'http'){
+        return 301 https://$host$request_uri;
+    }
+
     location / {
         index  index.html index.htm;
         try_files $uri $uri/ /index.html;
