--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,9 @@ services:
       "App:ServerRootAddress": ${SEVER_ROOT_ADDRESS}
       "App:CorsOrigins": ${CORS_ORIGIN}
       "App:DomainFormat": ${DOMAIN_FORMAT}
+      "Abp:RedisCache:IsEnabled": "false"
+      "Abp:RedisCache:ConnectionString": ${REDIS_CONNECTION_STRING}
+      "Abp:RedisCache:DatabaseId": ${REDIS_DATABASE_ID}
       "App:AllowAnonymousSignalRConnection": "true"
       "App:IdentityServer:IsEnabled": "false"
       "IdentityServer:IsEnabled": "false"
