--- a/nginx/conf.d/zinlo.com.conf
+++ b/nginx/conf.d/zinlo.com.conf
@@ -1,13 +1,13 @@
+upstream @wsserver {
+    server zinlo_api;
+}
+
 server {
-    listen       80;
-    server_name  *.zinlo.com;
+    listen 80;
+    server_name  *.zinlo.com zinlo.com;
 
     client_max_body_size 50M;
     root   /usr/share/nginx/html;
-
-    if ($http_x_forwarded_proto = 'http'){
-        return 301 https://$host$request_uri;
-    }
 
     location / {
         index  index.html index.htm;
@@ -30,21 +30,14 @@ server {
         proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header   X-Forwarded-Host $server_name;
     }
-    location /singalr{
-        proxy_pass         http://zinlo_api;
-        proxy_redirect     off;
-        proxy_set_header   Host $host;
-        proxy_set_header   X-Real-IP $remote_addr;
-        proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header   X-Forwarded-Host $server_name;
+    location /sockets{
+        proxy_pass http://@wsserver;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "Upgrade";
+        proxy_set_header Host            $host;
+        proxy_set_header X-Real-IP       $proxy_protocol_addr;
+        proxy_set_header X-Forwarded-For $proxy_protocol_addr;
+        # Very important, controls proxied websocket connection timeout
+        proxy_read_timeout 600s;
     }
-    location /signalr-chat {
-        proxy_pass         http://zinlo_api;
-        proxy_redirect     off;
-        proxy_set_header   Host $host;
-        proxy_set_header   X-Real-IP $remote_addr;
-        proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header   X-Forwarded-Host $server_name;
-    }
-
 }
