--- a/nginx/conf.d/zinlo.com.conf
+++ b/nginx/conf.d/zinlo.com.conf
@@ -14,7 +14,7 @@ server {
         try_files $uri $uri/ /index.html;
     }
     
-    location /api {
+    location ~* (/api|/profile|/chat|/users|/consent|/home|/stripe) {
         proxy_pass         http://zinlo_api;
         proxy_redirect     off;
         proxy_set_header   Host $host;
