--- a/nginx/conf.d/zinlo.com.conf
+++ b/nginx/conf.d/zinlo.com.conf
@@ -14,7 +14,7 @@ server {
         try_files $uri $uri/ /index.html;
     }
     
-    location ~* (/api|/profile|/chat|/users|/consent|/home|/stripe) {
+    location ~* (/AbpUserConfiguration|/api|/profile|/chat|/users|/consent|/home|/stripe) {
         proxy_pass         http://zinlo_api;
         proxy_redirect     off;
         proxy_set_header   Host $host;
@@ -22,14 +22,7 @@ server {
         proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header   X-Forwarded-Host $server_name;
     }
-    location /AbpUserConfiguration {
-        proxy_pass         http://zinlo_api;
-        proxy_redirect     off;
-        proxy_set_header   Host $host;
-        proxy_set_header   X-Real-IP $remote_addr;
-        proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header   X-Forwarded-Host $server_name;
-    }
+    
     location /sockets{
         proxy_pass http://@wsserver;
         proxy_set_header Upgrade $http_upgrade;
