--- a/nginx/conf.d/zinlo.com.conf
+++ b/nginx/conf.d/zinlo.com.conf
@@ -4,7 +4,7 @@ upstream @wsserver {
 
 server {
     listen 80;
-    server_name  *.zinlo.com zinlo.com;
+    server_name  _;
 
     client_max_body_size 50M;
     root   /usr/share/nginx/html;
@@ -13,7 +13,7 @@ server {
         index  index.html index.htm;
         try_files $uri $uri/ /index.html;
     }
-    
+
     location ~* (/AbpUserConfiguration|/api|/profile|/chat|/users|/consent|/home|/stripe) {
         proxy_pass         http://zinlo_api;
         proxy_redirect     off;
@@ -22,7 +22,7 @@ server {
         proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header   X-Forwarded-Host $server_name;
     }
-    
+ 
     location /sockets{
         proxy_pass http://@wsserver;
         proxy_set_header Upgrade $http_upgrade;
@@ -33,4 +33,5 @@ server {
         # Very important, controls proxied websocket connection timeout
         proxy_read_timeout 600s;
     }
+
 }
