signalR related changes

--- a/nginx/conf.d/zinlo.com.conf
+++ b/nginx/conf.d/zinlo.com.conf
@@ -23,7 +23,7 @@ server {
         proxy_set_header   X-Forwarded-Host $server_name;
     }
  
-    location /sockets{
+    location ~* (/signalr|/signalr-chat|/signalr-job){
         proxy_pass http://@wsserver;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "Upgrade";
