--- a/sample.env
+++ b/sample.env
@@ -11,6 +11,7 @@ AbpZeroLicenseCode=
 STRIPE_SECRET_KEY=
 STRIPE_PUBLISH_KEY=
 
-REDIS_CONNECTION_STRING
+REDIS_CONNECTION_STRING=
+REDIS_DATABASE_ID=
 
-REDIS_DATABASE_ID
+WEBSITE_URL=http://zinlo.com
