--- a/nginx/conf.d/zinlo.com.conf
+++ b/nginx/conf.d/zinlo.com.conf
@@ -14,6 +14,12 @@ server {
         try_files $uri $uri/ /index.html;
     }
 
+    location /Uploads-Attachments/ {
+       root /app/;
+       expires max;
+       access_log off;
+    }
+
     location ~* (/AbpUserConfiguration|/api|/file|/profile|/chat|/users|/consent|/home|/stripe) {
         proxy_pass         http://zinlo_api;
         proxy_redirect     off;
