added accountexcel route in nginx

--- a/nginx/conf.d/zinlo.com.conf
+++ b/nginx/conf.d/zinlo.com.conf
@@ -20,7 +20,7 @@ server {
        access_log off;
     }
 
-    location ~* (/AbpUserConfiguration|/api|/file|/profile|/chat|/users|/consent|/home|/stripe) {
+    location ~* (/AbpUserConfiguration|/api|/file|/profile|/chat|/users|/consent|/home|/stripe|/AccountsExcel) {
         proxy_pass         http://zinlo_api;
         proxy_redirect     off;
         proxy_set_header   Host $host;
