nginx rewrite rule changes.

--- a/nginx/conf.d/zinlo.com.conf
+++ b/nginx/conf.d/zinlo.com.conf
@@ -13,14 +13,14 @@ server {
         index  index.html index.htm;
         try_files $uri $uri/ /index.html;
     }
-
+    
     location /Uploads-Attachments/ {
        root /app/;
        expires max;
        access_log off;
     }
 
-    location ~* (/AbpUserConfiguration|/api|/file|/profile|/chat|/users|/consent|/home|/stripe|/AccountsExcel) {
+    location ~* (/AbpUserConfiguration|/api|/file/|/profile|/chat|/users|/consent|/home|/stripe|/AccountsExcel) {
         proxy_pass         http://zinlo_api;
         proxy_redirect     off;
         proxy_set_header   Host $host;
