change nginx config

--- a/nginx/conf.d/zinlo.com.conf
+++ b/nginx/conf.d/zinlo.com.conf
@@ -5,6 +5,7 @@ upstream @wsserver {
 server {
     listen 80;
     server_name  _;
+    ignore_invalid_headers off;
 
     client_max_body_size 50M;
     root   /usr/share/nginx/html;
