--- a/nginx/conf.d/zinlo.com.conf
+++ b/nginx/conf.d/zinlo.com.conf
@@ -6,6 +6,7 @@ server {
     listen 80;
     server_name  _;
     ignore_invalid_headers off;
+    underscores_in_headers on;
 
     client_max_body_size 50M;
     root   /usr/share/nginx/html;
