--- a/angular/package.json
+++ b/angular/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "ng": "ng",
     "publish": "gulp build && ng build --prod",
-    "build": "gulp build && node --max_old_space_size=8048 ./node_modules/@angular/cli/bin/ng build --prod=true --outputPath=dist --outputHashing=all --deleteOutputPath=true",
+    "build": "gulp build && node --max_old_space_size=2048 ./node_modules/@angular/cli/bin/ng build --prod=true --outputPath=dist --outputHashing=all --deleteOutputPath=true --build-optimizer=false",
     "start": "gulp buildDev && ng serve --host 0.0.0.0 --port 4200",
     "hmr": "gulp buildDev && ng serve --host 0.0.0.0 --port 4200 --hmr",
     "test": "gulp buildDev && ng test",
