--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,7 @@ services:
       "ConnectionStrings:Default": ${CONNECTION_STRING}
       "App:ServerRootAddress": ${SEVER_ROOT_ADDRESS}
       "App:ClientRootAddress": ${CLIENT_ROOT_ADDRESS}
+      "App:WebSiteRootAddress": ${CLIENT_ROOT_ADDRESS}
       "App:CorsOrigins": ${CORS_ORIGIN}
       "Abp:RedisCache:IsEnabled": "false"
       "Abp:RedisCache:ConnectionString": ${REDIS_CONNECTION_STRING}
