--- a/aspnet-core/src/Zinlo.EntityFrameworkCore/Zinlo.EntityFrameworkCore.csproj
+++ b/aspnet-core/src/Zinlo.EntityFrameworkCore/Zinlo.EntityFrameworkCore.csproj
@@ -52,6 +52,8 @@
     <Compile Remove="Migrations\20200424102427_Initial.Designer.cs" />
     <Compile Remove="Migrations\20200505165210_auditied_accountBalance.cs" />
     <Compile Remove="Migrations\20200505165210_auditied_accountBalance.Designer.cs" />
+    <Compile Remove="Migrations\20200921111435_Disable_DateTime_Normalization.cs" />
+    <Compile Remove="Migrations\20200921111435_Disable_DateTime_Normalization.Designer.cs" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Bogus" Version="28.4.4" />
