/ReconciliationExcel in nginx

--- a/nginx/conf.d/zinlo.com.conf
+++ b/nginx/conf.d/zinlo.com.conf
@@ -22,7 +22,7 @@ server {
        access_log off;
     }
 
-    location ~* (/AbpUserConfiguration|/api|/file/|/profile|/chat|/users|/consent|/home|/stripe|/AccountsExcel) {
+    location ~* (/AbpUserConfiguration|/api|/file/|/profile|/chat|/users|/consent|/home|/stripe|/AccountsExcel|/ReconciliationExcel) {
         proxy_pass         http://zinlo_api;
         proxy_redirect     off;
         proxy_set_header   Host $host;
